Add Capabilities Framework (#84)
* Add Ignition 8.3 container support

Update commissioning, readiness, and module selection for Ignition 8.3.
Parse third-party module descriptors so unsigned modules and gateway
dependencies can be enabled automatically, and use Testcontainers 2
for compatibility with current Docker engines.

* basically rewrite the whole thing

implement a capability/profile based structure

* Combine Capabilities+Appliers, add 8.3 third party module support.

Combine Capabilities+Appliers, add 8.3 third party module support.
Fix module.xml parsing
force line endings
force spotless format version

* add unsigned third-party module support

* add `implementedBy` capabilities

* update build docker image caches

* (8.3) fully include third-party module dependencies

* use a mutable copy of additionalArguments

---------

Co-authored-by: Kevin Herron <kevinherron@gmail.com>